Fixing footer logo spacing

--- a/src/components/footer/styles.module.css
+++ b/src/components/footer/styles.module.css
@@ -34,7 +34,7 @@ a:hover {
   padding-left: 1em;
 }
 
-.logo {
+.logo svg{
   width: 3em;
   display: inline-block;
 }
